--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,13 +12,12 @@
     <artifactId>api</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-         <dependency>
+         <parent>
             <groupId>ru.netology</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-         </dependency>
+         </parent>
+    <dependencies>
           <dependency>
             <groupId>org.example</groupId>
             <artifactId>service</artifactId>
