--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,35 +8,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
+    <groupId>ru.netology</groupId>
     <artifactId>api</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
-         <parent>
+    <dependencies>
+        <dependency>
             <groupId>ru.netology</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
-         </parent>
-    <dependencies>
+            <scope>compile</scope>
+        </dependency>
           <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-       </dependency>
-        <dependency>
             <groupId>org.example</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
