--- a/db/pom.xml
+++ b/db/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
+    <groupId>ru.netology</groupId>
     <artifactId>db</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
